Add run step to show output

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -60,6 +60,9 @@ jobs:
     - name: Download Ninja and CMake
       shell: cmake -P {0}
       run: |
+        - name: Run HelloWorld
+        run: ./build/HelloWorld
+
         set(cmake_version $ENV{CMAKE_VERSION})
         set(ninja_version $ENV{NINJA_VERSION})
 
